<resources>
    <string name="app_name">OnCampus उधार!</string>
    <string name="title_activity_my_advertisement">My Ads</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">New here? Sign Up!</string>
    <string name="hint_password">"Password"</string>
    <string name="btn_link_login">Old Place? Log in!</string>
    <string name="btn_send_password">Reset Password</string>
    <string name="email">"Email"</string>
    <string name="name">"Name"</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_sign_up">Register</string>
    <string name="elec">Electronics</string>
    <string name="cloth">Clothing</string>
    <string name="office">Office Supplies</string>
    <string name="sports">Sports Goods</string>
    <string name="misc">Miscellaneous</string>
    <string name="switch_on">You are currently offline. Please switch on the internet!</string>
    <string name="edit_ad">Edit</string>
    <string name="delete_ad">Delete</string>
    <string name="logout_text">You have successfully logged out!</string>
    <string name="search">Search</string>
    <string name="orderstatus1">No Requests Received</string>
    <string name="orderstatus2">Order Booked but pending for delivery</string>
    <string name="bookstatus1">Order Booked</string>
    <string name="bookstatus2">Order Accepted</string>
    <string name="bookstatus3">Order Declined</string>
    <string name="bookstatus4">Order Delivered</string>
    <string name="bookstatus5">Order Complete</string>
    <string name="title_activity_edit_advertisement">EditAdvertisement</string>
    <string name="invalidEmail">Please login using valid IIITD Email ID</string>
    <string-array name="category">
        <item>Sports Goods</item>
        <item>Clothing</item>
        <item>Office Supplies</item>
        <item>Electronics</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="RentSell">
        <item>Sell</item>
        <item>Rent</item>
    </string-array>
    <string-array name="RentTime">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

</resources>
