<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fillViewport="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:layout_marginBottom="30dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="50sp"
            android:gravity="center">

            <EditText
                android:id="@+id/signup_input_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/search_layout"
                android:ems="50"
                android:fontFamily="@font/consola"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/signup_input_email"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/search_layout"
                android:ems="50"
                android:fontFamily="@font/consola"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/search_layout"
                    android:ems="50"
                    app:passwordToggleEnabled="true"
                    android:fontFamily="@font/consola"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/btn_link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad_value"
                android:gravity="center"
                android:text="@string/btn_link_login"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_val"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_signup"
            android:text="@string/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/consola"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:theme="@style/themeName"/>
    </RelativeLayout>
</RelativeLayout>