<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
            <EditText
                android:id="@+id/signup_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Name"/>

            <EditText
                android:id="@+id/signup_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="Email" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/signup_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />
            <ImageView
            android:id="@+id/eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/signup_input_password"
            android:layout_alignBottom="@+id/signup_input_password"
            android:layout_alignRight="@+id/signup_input_password"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:src="@drawable/eye"
            />
        </RelativeLayout>

        <Button android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:theme="@style/themeName"/>

        <TextView android:id="@+id/btn_link_login"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:text="@string/btn_link_login"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>