<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:autoSizeTextType="uniform"
    tools:menu="@menu/bottom_navigation">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:scrollbars="none"
        app:autoSizeTextType="uniform">

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="3"
            android:stretchMode="columnWidth">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/c1"
                            android:layout_width="1in"
                            android:layout_height="1in"
                            android:layout_gravity="center_horizontal"
                            android:onClick="select"
                            android:src="@drawable/electronics_icon" />

                        <TextView
                            android:id="@+id/electronics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/consola"
                            android:text="@string/elec" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/c2"
                            android:layout_width="1in"
                            android:layout_height="1in"
                            android:layout_gravity="center_horizontal"
                            android:onClick="select"
                            android:src="@drawable/accessories_icon" />

                        <TextView
                            android:id="@+id/accessories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/consola"
                            android:text="@string/cloth" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/c3"
                            android:layout_width="1in"
                            android:layout_height="1in"
                            android:layout_gravity="center_horizontal"
                            android:onClick="select"
                            android:src="@drawable/sports_icon" />

                        <TextView
                            android:id="@+id/sports"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/consola"
                            android:text="@string/sports" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/c4"
                            android:layout_width="1in"
                            android:layout_height="1in"
                            android:layout_gravity="center_horizontal"
                            android:onClick="select"
                            android:src="@drawable/stationary_icon" />

                        <TextView
                            android:id="@+id/stationery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/consola"
                            android:text="@string/office" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/c5"
                            android:layout_width="1in"
                            android:layout_height="1in"
                            android:layout_gravity="center_horizontal"
                            android:onClick="select"
                            android:src="@drawable/misc" />

                        <TextView
                            android:id="@+id/misc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/consola"
                            android:text="@string/misc" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_float"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@drawable/baseline_search_white_18dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
